Enable local testing.
Signed-off-by: Pascal Spörri <psp@zurich.ibm.com>